# Software-Design-Homework

Lab1_18281218/: CMakeLists.txt  Lab1_18281218.docx  ReadMe.txt  main.cpp
Lab2_18281218/: CMakeLists.txt  Lab2_18281218.docx  RandomValue.txt  a.out  a.txt  main.cpp
Lab3_18281218/: CMakeLists.txt  Lab3_data.h  Lab3_fun.cpp  Lab3_fun.h  Lab3_run.cpp  Lab3_run.h  a.out  main.cpp  ~$b3_18281218.docx
Lab3_18281218/diagram/: isNumber.graffle
Lab4_18281218/: CMakeLists.txt  Lab4_data.h  Lab4_fun.cpp  Lab4_fun.h  Lab4_run.cpp  Lab4_run.h  main.cpp
Lab5_18281218/: CMakeLists.txt  Lab5.cpp  Lab5_18281218_Appendix_I_Design_Manual.docx  Lab5_call.cpp  Lab5_call.h  Lab5_conf.cpp  Lab5_conf.h  Lab5_data.h  Lab5_loadfile.cpp  Lab5_loadfile.h  Lab5_main.cpp  Lab5_main.h  Lab5_view.cpp  Lab5_view.h  a.out  conf.ini  ~$b5_18281218_Appendix_I_Design_Manual.docx
Lab5_18281218/Lab4_Out/: .dataFile.dat.swp  DataFile.txt
Lab6_18281218/: CMakeLists.txt  Lab4.out  Lab6.cpp  Lab6_18281218_Appendix_I_Design_Manual.docx  Lab6_call.cpp  Lab6_call.h  Lab6_conf.h  Lab6_data.h  Lab6_loadfile.cpp  Lab6_loadfile.h  Lab6_main.cpp  Lab6_main.h  Lab6_sort.cpp  Lab6_sort.h  Lab6_view.cpp  Lab6_view.h  a.out  conf.ini
Lab6_18281218/Lab4_Out/: DataFile.txt
Lab7_18281218/: CMakeLists.txt  Lab7.cpp  Lab7_data.h  Lab7_main.cpp  Lab7_main.h  conf.ini
Lab7_18281218/DataDirectory/: dataFile.txt
Lab7_18281218/data/: Lab7_call.cpp  Lab7_call.h  Lab7_loadfile.cpp  Lab7_loadfile.h
Lab7_18281218/elevator/: Lab7_elevator_work.cpp  Lab7_elevator_work.h
题目/实验1/: CodeForLab1A.txt  CodeForLab1B.txt
