cmake_minimum_required(VERSION 3.13)
project(Lab6_18281218)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab6_18281218 Lab6.cpp Lab6_data.h Lab6_main.h Lab6_call.h Lab6_main.cpp Lab6_call.cpp Lab6_loadfile.cpp Lab6_loadfile.h Lab6_view.cpp Lab6_view.h Lab6_conf.cpp Lab6_conf.h Lab6_sort.cpp Lab6_sort.h)