cmake_minimum_required(VERSION 3.13)
project(Lab7_18281218)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab7_18281218 Lab7.cpp data/Lab7_call.h data/Lab7_call.cpp Lab7_data.h data/Lab7_loadfile.cpp data/Lab7_loadfile.h Lab7_main.cpp Lab7_main.h elevator/Lab7_elevator_work.h elevator/Lab7_elevator_work.cpp)